--- a/groupdetail.html
+++ b/groupdetail.html
@@ -52,13 +52,13 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown">
+						<li class="has-dropdown active">
 							<a href="businessactivity.html">Business Activity</a>
 							<ul class="dropdown">
-								<li><a href="groupchat.html">Group Chat</a></li>
+								<li  class="dropdown-active"><a href="groupchat.html">Group Chat</a></li>
 							</ul>
 						</li>
-						<li class="active"><a href="company.html">Company Contact List</a></li>
+						<li><a href="company.html">Company Contact List</a></li>
 						<li><a href="services.html">Affiliate Services</a></li>
 						<li><a href="partners.html">Our Partners</a></li>
 						<li><a href="share.html">Sharing Knowledge</a></li>
