--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li class="has-dropdown">
-							<a href="businessactivity.html">Business Activity</a>
-							<ul class="dropdown">
-								<li><a href="groupchat.html">Group Chat</a></li>
-							</ul>
-						</li>
+						<li><a href="businessactivity.html">Business Activity</a></li>
 						<li><a href="company.html">Company Contact List</a></li>
 						<li><a href="services.html">Affiliate Services</a></li>
 						<li><a href="partners.html">Our Partners</a></li>
@@ -141,7 +136,7 @@
 								<span>Introduce BCP</span>
 								<h3>Make meetings more productive for everyone.</h3>
 								<p>You know you're not the only one who dreads the weekly meeting. Person-by-person status updates. Really? Still?! Imagine your daily back-to-back meetings are replaced by project-specific quick video chats. Only as needed.</p>
-								<p><a href="servicedetail.html" class="btn btn-lg btn-primary">View More</a></p>
+								<p><a href="introductiondetail.html" class="btn btn-lg btn-primary">View More</a></p>
 							</div>
 						</div>
 					</div>
@@ -158,7 +153,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>Want Some Cool Stuff</span>
-					<h2>Connect Services</h2>
+					<h2>Affiliate Services</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
@@ -248,20 +243,6 @@
 						<img class="img-responsive" src="images/img_bg_2.jpg" alt="about">
 					</div>
 					
-				</div>
-				<div class="row row-pb-md">
-					<div class="col-md-12 fh5co-widget" style="display: flex; justify-content: center;">
-						<div class="pagination text-center">
-						  <a href="#">&laquo;</a>
-						  <a href="#">1</a>
-						  <a href="#" class="active">2</a>
-						  <a href="#">3</a>
-						  <a href="#">4</a>
-						  <a href="#">5</a>
-						  <a href="#">6</a>
-						  <a href="#">&raquo;</a>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
