--- a/businessactivity.html
+++ b/businessactivity.html
@@ -52,12 +52,7 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown active">
-							<a href="businessactivity.html">Business Activity</a>
-							<ul class="dropdown">
-								<li><a href="groupchat.html">Group Chat</a></li>
-							</ul>
-						</li>
+						<li class="active"><a href="businessactivity.html">Business Activity</a></li>
 						<li><a href="company.html">Company Contact List</a></li>
 						<li><a href="services.html">Affiliate Services</a></li>
 						<li><a href="partners.html">Our Partners</a></li>
@@ -139,20 +134,6 @@
 					</div>
 				</div>
 			</div>
-			<div class="row row-pb-md">
-				<div class="col-md-12 fh5co-widget" style="display: flex; justify-content: center;">
-					<div class="pagination text-center">
-					  <a href="#">&laquo;</a>
-					  <a href="#">1</a>
-					  <a href="#" class="active">2</a>
-					  <a href="#">3</a>
-					  <a href="#">4</a>
-					  <a href="#">5</a>
-					  <a href="#">6</a>
-					  <a href="#">&raquo;</a>
-					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 	
@@ -189,20 +170,6 @@
 						<img class="img-responsive" src="images/img_bg_2.jpg" alt="about">
 					</div>
 					
-				</div>
-				<div class="row row-pb-md">
-					<div class="col-md-12 fh5co-widget" style="display: flex; justify-content: center;">
-						<div class="pagination text-center">
-						  <a href="#">&laquo;</a>
-						  <a href="#">1</a>
-						  <a href="#" class="active">2</a>
-						  <a href="#">3</a>
-						  <a href="#">4</a>
-						  <a href="#">5</a>
-						  <a href="#">6</a>
-						  <a href="#">&raquo;</a>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -242,20 +209,6 @@
 					</div>
 					
 				</div>
-				<div class="row row-pb-md">
-					<div class="col-md-12 fh5co-widget" style="display: flex; justify-content: center;">
-						<div class="pagination text-center">
-						  <a href="#">&laquo;</a>
-						  <a href="#">1</a>
-						  <a href="#" class="active">2</a>
-						  <a href="#">3</a>
-						  <a href="#">4</a>
-						  <a href="#">5</a>
-						  <a href="#">6</a>
-						  <a href="#">&raquo;</a>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -270,7 +223,7 @@
 								<span>Self-intro/ Promotion</span>
 								<h3>Make meetings more productive for everyone.</h3>
 								<p>You know you're not the only one who dreads the weekly meeting. Person-by-person status updates. Really? Still?! Imagine your daily back-to-back meetings are replaced by project-specific quick video chats. Only as needed.</p>
-								<p><a href="#" class="btn btn-lg btn-primary">View More</a></p>
+								<p><a href="introductiondetail.html" class="btn btn-lg btn-primary">View More</a></p>
 							</div>
 						</div>
 					</div>
@@ -307,6 +260,67 @@
 			</div>
 		</div>
 	</div> -->
+	
+	<div id="fh5co-project">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Group Chat</h2>
+				</div>
+			</div>
+			<div class="col-md-5">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+						<h2>Limited</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 animate-box">
+						<div class="project-grid" style="background-image:url(images/project-2.jpg);">
+							<div class="desc">
+								<span>Group Name</span>
+								<h3><a href="groupdetail.html">Keyword Search</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="project-grid" style="background-image:url(images/project-3.jpg);">
+							<div class="desc">
+								<span>Group Name</span>
+								<h3><a href="#">Keyword Search</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-5">
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+						<h2>Unlimited</h2>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 animate-box">
+						<div class="project-grid" style="background-image:url(images/project-2.jpg);">
+							<div class="desc">
+								<span>Group Name</span>
+								<h3><a href="#">Keyword Search</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="project-grid" style="background-image:url(images/project-3.jpg);">
+							<div class="desc">
+								<span>Group Name</span>
+								<h3><a href="#">Keyword Search</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
