--- a/introductiondetail.html
+++ b/introductiondetail.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>ChatWork</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -51,8 +51,8 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="active"><a href="businessactivity.html">Business Activity</a></li>
+						<li  class="active"><a href="index.html">Home</a></li>
+						<li><a href="businessactivity.html">Business Activity</a></li>
 						<li><a href="company.html">Company Contact List</a></li>
 						<li><a href="services.html">Affiliate Services</a></li>
 						<li><a href="partners.html">Our Partners</a></li>
@@ -70,100 +70,53 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
+				<div class="col-md-12 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Group Chat</h1>
-							<div class="row">
-								<div class="col-md-12">
-									<div class="form-group">
-										<div class="dropdown">
-											<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split filter-btn dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><span class="label-icon" >Job</span> <span class="caret" >&nbsp;</span></button>
-											<div class="dropdown-menu dropdown-menu-right dropdown-content" >
-												<a href="#">GCS</a>
-												<a href="#">Larion</a>
-												<a href="#">FPT</a>
-											</div>
-										</div>
-										<div class="dropdown">
-											<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split filter-btn dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><span class="label-icon" >Country</span> <span class="caret" >&nbsp;</span></button>
-											<div class="dropdown-menu dropdown-menu-right dropdown-content" >
-												<a href="#">GCS</a>
-												<a href="#">Larion</a>
-												<a href="#">FPT</a>
-											</div>
-										</div>
-										<div class="dropdown">
-											<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split filter-btn dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><span class="label-icon" >Demand</span> <span class="caret" >&nbsp;</span></button>
-											<div class="dropdown-menu dropdown-menu-right dropdown-content" >
-												<a href="#">GCS</a>
-												<a href="#">Larion</a>
-												<a href="#">FPT</a>
-											</div>
-										</div>
-										<button type="search" class="btn btn-default" style="border: none !important;">Search</button>
-									</div>
-								</div>
-							</div>
+							<h1>ChatWork</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</header>
-
-	<div id="fh5co-project">
+	
+	<div id="fh5co-about">
 		<div class="container">
-			<div class="col-md-5">
+			<div class="about-content">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Limited</h2>
+						<h2>Introduction</h2>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-6 animate-box">
-						<div class="project-grid" style="background-image:url(images/project-2.jpg);">
-							<div class="desc">
-								<span>Group Name</span>
-								<h3><a href="groupdetail.html">Keyword Search</a></h3>
-							</div>
+				<div class="row animate-box blog-view">
+					<div class="col-md-6 col-md-push-6">
+						<div class="desc">
+							<h3>History</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex sunt ea praesentium expedita numquam?</p> 
+							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
 						</div>
 					</div>
-					<div class="col-md-6 animate-box">
-						<div class="project-grid" style="background-image:url(images/project-3.jpg);">
-							<div class="desc">
-								<span>Group Name</span>
-								<h3><a href="#">Keyword Search</a></h3>
-							</div>
-						</div>
+					<div class="col-md-6 col-md-pull-6">
+						<img class="img-responsive" src="images/img_bg_1.jpg" alt="about">
 					</div>
+					
 				</div>
 			</div>
-			<div class="col-md-2"></div>
-			<div class="col-md-5">
-				<div class="row animate-box">
-					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>Unlimited</h2>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 animate-box">
-						<div class="project-grid" style="background-image:url(images/project-2.jpg);">
-							<div class="desc">
-								<span>Group Name</span>
-								<h3><a href="#">Keyword Search</a></h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="project-grid" style="background-image:url(images/project-3.jpg);">
-							<div class="desc">
-								<span>Group Name</span>
-								<h3><a href="#">Keyword Search</a></h3>
-							</div>
-						</div>
-					</div>
-				</div>
+		</div>
+	</div>
+	
+	<div class="row row-pb-md">
+		<div class="col-md-12 fh5co-widget" style="display: flex; justify-content: center;">
+			<div class="pagination text-center">
+			  <a href="#">&laquo;</a>
+			  <a href="#">1</a>
+			  <a href="#" class="active">2</a>
+			  <a href="#">3</a>
+			  <a href="#">4</a>
+			  <a href="#">5</a>
+			  <a href="#">6</a>
+			  <a href="#">&raquo;</a>
 			</div>
 		</div>
 	</div>
