--- a/partnerdetail.html
+++ b/partnerdetail.html
@@ -58,9 +58,9 @@
 								<li><a href="groupchat.html">Group Chat</a></li>
 							</ul>
 						</li>
-						<li class="active"><a href="company.html">Company Contact List</a></li>
+						<li><a href="company.html">Company Contact List</a></li>
 						<li><a href="services.html">Affiliate Services</a></li>
-						<li><a href="partners.html">Our Partners</a></li>
+						<li  class="active"><a href="partners.html">Our Partners</a></li>
 						<li><a href="share.html">Sharing Knowledge</a></li>
 						<li><a href="contact.html">Contact</a></li>
 						<li class="btn-cta"><a href="#"><span>Login</span></a></li>
